; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform.c_erase_ch.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform.c_erase_ch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dstr = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dstr*, i64)* @erase_ch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @erase_ch(%struct.dstr* %0, i64 %1) #0 {
  %3 = alloca %struct.dstr*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.dstr, align 8
  store %struct.dstr* %0, %struct.dstr** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = bitcast %struct.dstr* %5 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %6, i8 0, i64 16, i1 false)
  %7 = load %struct.dstr*, %struct.dstr** %3, align 8
  %8 = load i64, i64* %4, align 8
  %9 = call i32 @dstr_left(%struct.dstr* %5, %struct.dstr* %7, i64 %8)
  %10 = load %struct.dstr*, %struct.dstr** %3, align 8
  %11 = getelementptr inbounds %struct.dstr, %struct.dstr* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* %4, align 8
  %14 = add i64 %12, %13
  %15 = add i64 %14, 1
  %16 = call i32 @dstr_cat(%struct.dstr* %5, i64 %15)
  %17 = load %struct.dstr*, %struct.dstr** %3, align 8
  %18 = call i32 @dstr_free(%struct.dstr* %17)
  %19 = load %struct.dstr*, %struct.dstr** %3, align 8
  %20 = bitcast %struct.dstr* %19 to i8*
  %21 = bitcast %struct.dstr* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %20, i8* align 8 %21, i64 16, i1 false)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @dstr_left(%struct.dstr*, %struct.dstr*, i64) #2

declare dso_local i32 @dstr_cat(%struct.dstr*, i64) #2

declare dso_local i32 @dstr_free(%struct.dstr*) #2

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
